A big refactoring:  1) Split code into modules.  2) Unit tests.  3) Check for different http status codes.  4) Chuck Norris API can be called multiple times.  5) JSON to XML convertion refactored.

--- a/jokes/Dependencies.toml
+++ b/jokes/Dependencies.toml
@@ -309,7 +309,10 @@ dependencies = [
 	{org = "ballerinai", name = "observe"}
 ]
 modules = [
-	{org = "jani", packageName = "jokes", moduleName = "jokes"}
+	{org = "jani", packageName = "jokes", moduleName = "jokes"},
+	{org = "jani", packageName = "jokes", moduleName = "jokes.chucknorris"},
+	{org = "jani", packageName = "jokes", moduleName = "jokes.common"},
+	{org = "jani", packageName = "jokes", moduleName = "jokes.simpsons"}
 ]
 
 
